# sup

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile.toml  README.md  index.html  install.sh  pubkey.gpg  release.toml  scoop.json
.githooks/: pre-commit  pre-push
.github/workflows/: build.yaml  package.yaml
conf/: distributions
db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
dists/any/: InRelease  Release  Release.gpg
dists/any/main/binary-amd64/: Packages  Release
pool/main/g/git-sup/: git-sup_0.1.2-1_amd64.deb  git-sup_0.1.3-1_amd64.deb  git-sup_0.1.4-1_amd64.deb
pool/main/s/sup/: sup_0.1.2-1_amd64.deb
scoop/: sup.json  update-manifest.sh
src/: cli.rs  credentials.rs  hooks.rs  main.rs  pull.rs  serde.rs  sup.rs  ui.rs
tests/: integration_sup.rs
