[package]
name = "sup"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
argh = "0.1.13"
git2 = "0.20.2"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.140"
structopt = "0.3.26"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tempfile = "3"

# Removing ssh support for darwin, as openssl
# cannot be built for darwin:

[target.aarch64-apple-darwin.dependencies]
git2 = { version= "0.20.2", default-features = false }

[target.x86_64-apple-darwin.dependencies]
git2 = { version= "0.20.2", default-features = false }

# In linux and windows targets openssl can be built
# with vendored feature, so we can use git2 with ssh support:

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.x86_64-pc-windows-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }