[package]
name = "sup"
version = "0.1.7"
edition = "2021"
description = "A tool for Trunk-Based Development to safely and quickly push code to git repository."

[dependencies]
anyhow = "1.0.98"
argh = "0.1.13"
console = "0.16.0"
ctrlc = "3.4.7"
dialoguer = "0.11.0"
indicatif = "0.18.0"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.140"
structopt = "0.3.26"
tempfile = "3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
which = "8.0.0"

# Temp replacement for closing progress bars with finish message
[dependencies.tracing-indicatif]
git = "https://github.com/strowk/tracing-indicatif"

[dev-dependencies]
insta = { version = "1.43.1", features = ["filters"] }
tempfile = "3"

# Removing ssh support for macos, as openssl
# cannot be built for macos:

[target.'cfg(target_os = "macos")'.dependencies]
git2 = { version= "0.20.2", default-features = false }

# In linux targets openssl can be built with vendored
# feature, so we can use git2 with ssh support:

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
git2 = "0.20.2"

# Windows targets can use git2 with ssh support
# without building openssl:

[target.'cfg(target_os = "windows")'.dependencies]
git2 = "0.20.2"

[package.metadata.deb]
maintainer = "strowk <25692644+strowk@users.noreply.github.com>"
section = "utils"
name = "git-sup"
assets = [
    "$auto",
    # this is an alias to integrate into git
    ["target/release/git-sup", "usr/bin/", "755"],
] 
